<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>no.sikt</groupId>
        <artifactId>graphitron-rewrite-parent</artifactId>
        <version>10-SNAPSHOT</version>
    </parent>
    <artifactId>graphitron</artifactId>
    <name>${project.groupId}:${project.artifactId}</name>
    <url>https://github.com/sikt-no/graphitron</url>

    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>graphitron-javapoet</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!--
            The fact store: its jOOQ compile-time surface is what the capture package writes
            through, and its bootstrap is what opens the per-run database. The module builds
            first, so editing the fact-schema DDL fails javac here for every relation a consumer
            touched.
        -->
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>graphitron-model</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.graphql-java</groupId>
            <artifactId>graphql-java</artifactId>
        </dependency>
        <dependency>
            <groupId>com.apollographql.federation</groupId>
            <artifactId>federation-graphql-java-support</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>graphitron-sakila-service</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Phase 3 of R101: graphql-java-extended-scalars is the canonical convention-layer
             artifact. Carried at test scope so ScalarTypeResolverTest, the convention-table
             drift test, and pipeline tests can exercise the resolver against real constants;
             the runtime artifact is the consumer's choice and graphitron stays out of it. -->
        <dependency>
            <groupId>com.graphql-java</groupId>
            <artifactId>graphql-java-extended-scalars</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- R410 slice 5: the incremental-compile acceptance harness (IncrementalCompileHarnessTest)
             compiles the generated runtime, which references jakarta.validation (GraphitronContext /
             ConstraintViolations); the API is a consumer runtime choice, carried here at test scope
             only so the harness can compile that generated code. -->
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>25</release>
                    <parameters>true</parameters>
                </configuration>
                <executions>
                    <!-- The test tree compiles with -parameters (services / conditions resolve
                         arg names by reflection). The codereferences.noparams package is the one
                         exception: R201 needs a name-less POJO to pin the ctor-arm reject when a
                         @field(name:) targets a class compiled without -parameters. Exclude that
                         package from the default -parameters test compile and compile it in a
                         dedicated pass with -parameters off. The package is self-contained, so no
                         other test class references it at compile time. -->
                    <execution>
                        <id>default-testCompile</id>
                        <configuration>
                            <testExcludes>
                                <testExclude>no/sikt/graphitron/codereferences/noparams/**</testExclude>
                            </testExcludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>test-compile-noparams</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <parameters>false</parameters>
                            <testIncludes>
                                <testInclude>no/sikt/graphitron/codereferences/noparams/**</testInclude>
                            </testIncludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Republish compiled tests as a test-jar so other modules
                 (graphitron-sakila-example) can consume the tier-annotation
                 vocabulary (@UnitTier / @PipelineTier / @CompilationTier /
                 @ExecutionTier) without putting it on this module's main
                 classpath. The annotations live under
                 src/test/java/no/sikt/graphitron/rewrite/test/tier/. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                        <configuration>
                            <!-- junit-platform.properties configures this module's own test runs
                                 (autodetection of ClassificationTraceContextExtension). It must not
                                 ride along in the test-jar: consumers (graphitron-sakila-example)
                                 that only want the tier-annotation vocabulary would otherwise get a
                                 second junit-platform.properties on their classpath, producing the
                                 "Discovered 2 'junit-platform.properties'" launcher warning on every
                                 surefire run. The extension itself is graphitron-internal and no
                                 consumer relies on it being auto-registered. -->
                            <excludes>
                                <exclude>junit-platform.properties</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
